--- a/styles/main.css
+++ b/styles/main.css
@@ -29,12 +29,13 @@ h1 {
     font-size: 4em;
     font-weight: 900;
     text-shadow: 0.02em 0.04em #403D58;
-    color: aquamarine;
+    color: slateblue;
 }
 
 h2 {
-    border-bottom: 0.1em solid #66D7D1;
-    padding: 0.25em;
+    font-style: italic;
+    border-bottom: 0.1em solid #12302e;
+    padding: 0.5em;
     margin: 1.6em 0;
 }
 
@@ -43,7 +44,7 @@ section p {
 }
 
 .project {
-    background-color: #403D58;
+    background-color: #3d5847;
     color: #F2EFEA;
     padding: 0.5em 2em;
     border-radius: 0.5em;
